--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -8,11 +8,12 @@ test:
 
 # set these environment variables on your prod server
 production:
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
+  host: <%= ENV['mongodb://superhappyfuntime:trever101@staff.mongohq.com:10061/ASCII
+'] %>
+  port: <%= ENV['10061'] %>
+  username: <%= ENV['superhappyfuntime'] %>
+  password: <%= ENV['trever101'] %>
+  database: <%= ENV['ASCII'] %>
   # slaves:
   #   - host: slave1.local
   #     port: 27018
